<resources>
    <string name="app_name">beHaq</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hai, saya beHaq</string>
    <string name="baris1">beHaq adalah hoax analyzer berbahasa Indonesia,</string>
    <string name="baris2">yang akan membantu anda menganalisa sebuah</string>
    <string name="baris3">kalimat atau berita yang meragukan bagi Anda.</string>
    <string name="baris4">tekan</string>
    <string name="baris5">Oke, Lanjut</string>
    <string name="baris6">untuk melanjutkan analisa dan</string>
    <string name="baris7">Laporkan HOAX</string>
    <string name="baris8">untuk membantu kami</string>
    <string name="baris9">mengenali HOAX</string>
    <string name="info">Untuk mengawali pencarian, silahkan masukkan kalimat atau paragraf berita / broadcast yang masih membuat Anda ragu. Kami akan membantu anda manganalisa.</string>
    <string name="info2">Kemudian tekan</string>
    <string name="info3">Analiza</string>
    <string name="info4">Sekarang !</string>
    <string name="info5">  Laporkan</string>
    <string name="info6">Hoax</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_fitur">FiturActivity</string>
    <string name="analyze">Home</string>
    <string name="ask">Dashboard</string>
    <string name="profile">Notifications</string>
    <string name="hoax">Artikel / Berita tersebut diindikasi mengandung HOAX</string>
    <string name="hoax_content">Hoax dalam defisi termurninya adalah berita bohong yang dibuat secara sengaja. pembuatnya tahu behwa berita itu bohong dan bermaksud untuk menipu orang dengan beritanya</string>
    <string name="verified">Artikel / Berita terbebas dari kontent HOAX</string>
    <string name="verified_content">Mari kita jaga media online dengan menyebarkan berita terpercaya. Namun, berita yang terverifikasi ini belum sepenuhnya benar, untuk itu apabila berita ini HOAX, mari kita laporkan</string>
    <string name="positive">Artikel / Berita mempunyai sentimen POSITIF(+)</string>
    <string name="positive_content">Sentiment positif menunjukkan bahwa artikel / berita tersebut mempunyai kata-kata berkonotasi positif dan bermakna baik. namun belum tentu sentiment positif tersebut menandakan artikel anda terbebas dari HOAX</string>
    <string name="negative">Artikel / Berita mempunyai sentimen NEGATIVE(-)</string>
    <string name="negative_content">Sentiment Negative menunjutkkan bahwa artikel / berita tersebut mempunyai kata berkonotasi kasar, negatif atau tidak layak ditampilkan. sentiment negatif tidak menjamin berita tersebut HOAX, karena terdapat berita fakta namun bersifat provokatif dan SARA. Untuk itu kita harus selalu waspada.</string>
    <string name="neutral">Artikel / Berita mempunyai sentimen NEUTRAL(0)</string>
    <string name="neutral_content">Sentiment Netral menunjukkan bahwa artikel / berita tersebut mempunyai kata kata yang tidak mengacu pada positif atau negatif. Atau bisa jadi artikel / berita tersebut memiliki jumlah kata positif dan negatif yang sama, sehingga menjadi netral. Kita harus selalu waspada.</string>
</resources>
