<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPutih"
    android:orientation="vertical"
    tools:context="com.example.hp.behaq.AnalyzeActivity">

    <include layout="@layout/app_bar_home"/>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:background="@color/colorAbu"
            android:orientation="horizontal"
            android:layout_marginTop="90dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/linearLayout">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/info"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/colorhitam"
                android:textAlignment="gravity"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_below="@+id/linearLayout"
            android:layout_marginStart="73dp"
            android:layout_marginTop="15dp"
            android:text="@string/info2"
            android:textColor="@color/colorhitam"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/textView"
            android:text="@string/info3"
            android:textColor="@color/colorhitam"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:text="@string/info4"
            android:textColor="@color/colorhitam"
            android:textStyle="bold"
            android:id="@+id/textView2" />

        <EditText
            android:id="@+id/et_inputSearchAnalyze"
            android:layout_width="300dp"
            android:layout_height="145dp"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:ellipsize="start"
            android:gravity="left"
            android:hint="Masukkan kata"
            android:inputType="textMultiLine"
            android:lines="@android:integer/config_longAnimTime"
            android:textSize="14dp"
            android:scrollbars="vertical"/>

        <Button
            android:id="@+id/btn_searchAnalyze"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/et_inputSearchAnalyze"
            android:layout_below="@+id/et_inputSearchAnalyze"
            android:layout_marginEnd="37dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/button_round"
            android:text="Analisa sekarang !"
            android:textColor="@color/colorPutih" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>