<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.hp.behaq.LaporkanActivity">

    <include layout="@layout/app_bar_home"/>
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:background="@color/colorAbu"
            android:orientation="horizontal"
            android:layout_marginTop="90dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/linearLayout">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/info"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/colorhitam"
                android:textAlignment="gravity"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_below="@+id/linearLayout"
            android:layout_marginStart="73dp"
            android:layout_marginTop="15dp"
            android:text="@string/info2"
            android:textColor="@color/colorhitam"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView"
            android:layout_alignBottom="@+id/textView"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/textView"
            android:text="@string/info5"
            android:textColor="@color/colorhitam"
            android:textStyle="bold"
            android:id="@+id/textView3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:text="@string/info6"
            android:textColor="@color/colorhitam"
            android:textStyle="bold"
            android:id="@+id/textView2" />

        <EditText
            android:id="@+id/et_inputSearchLaporkan"
            android:layout_width="300dp"
            android:layout_height="145dp"
            android:layout_alignStart="@+id/et_inputEmailLaporkan"
            android:layout_below="@+id/et_inputEmailLaporkan"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ellipsize="start"
            android:gravity="left"
            android:hint="Masukkan kata yang ingin di analisa"
            android:inputType="textMultiLine"
            android:lines="@android:integer/config_longAnimTime"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_inputEmailLaporkan"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="Masukkan Email anda sebagai identitas"
            android:inputType="text"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_inputUrlLaporkan"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:layout_alignStart="@+id/et_inputSearchLaporkan"
            android:layout_below="@+id/et_inputSearchLaporkan"
            android:layout_marginTop="9dp"
            android:background="@drawable/border"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="Bantu kami memverifikasi dengan menyertakan url"
            android:inputType="text"
            android:textSize="14dp" />

            <Button
                android:id="@+id/btn_laporkanLaporkan"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginBottom="30dp"
                android:layout_alignStart="@+id/et_inputUrlLaporkan"
                android:layout_below="@+id/et_inputUrlLaporkan"
                android:layout_marginTop="18dp"
                android:background="@drawable/button_round2"
                android:text="Laporka HOAX !"
                android:textColor="@color/colorPutih" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>